--- a/paper/DA.tex
+++ b/paper/DA.tex
@@ -488,16 +488,16 @@ In the RFAM alignment, the two representative sequences (AM420293\_1 and CP00058
 have a sequence identity of 55\%. Pure sequence alignment increases this to 69\%, 
 but fails to align most structural features. 
 \dotaligner's pairwise probabilistic string alignment (step 1) creates an alignment of PID=56\%, which is increased to PID=63\% through \dotaligner's sampling.
-However, the number of correctly aligned suboptimal base pairs increases via \dotaligner{}'s sampling (Additional file 2: Figure S1). In this example, the alignment scores do not differ very much between \dotaligner's optimal string alignment (step 1) and the best sample (step 2): 0.58 and 0.60, respectively. However, the sampling (s=1000 in this example) increased the runtime. \\ 
+However, the number of correctly aligned suboptimal base pairs increases via \dotaligner{}'s sampling (Additional file 2: Figure S1). In this example, the alignment scores do not differ very much between \dotaligner's optimal string alignment (step 1) and the best sample (step 2): 0.58 and 0.60, respectively. However, the sampling (s=1000 in this example) increased the runtime ~25x, from 0.03 to 0.84 seconds. \\ 
 }
 
 \subsection*{Fast and accurate classification of RNA structures} 
 
 The intended application of \dotaligner{}  is the identification and
-classification of RNA structural motifs from a large and diverse set of sequences of interest. 
+\textcolor{red}{clustering} of RNA structural motifs from a large and diverse set of sequences of interest. 
 Therefore, we evaluated the ability of \dotaligner{} to distinguish between distinct structured 
 RNA species from a heterogeneous sample of known RNA structure families. 
-We performed all versus all pairwise structure alignments of stochastically sampled RFAM sequences, 
+We performed all-vs-all pairwise structure alignments of stochastically sampled RFAM sequences, 
 which were selected with constraints on their sequence composition (PID) to 
 control for and ascertain any sequence-dependent biases (see Methods). 
 \dotaligner{} alignment scores were then compared to a binary classification matrix 
