--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1,12 +1,36 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Martin Smith at 2017-09-12 15:55:32 +1000 
+%% Created for Martin Smith at 2017-09-22 22:59:08 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{gong2011lncrnas,
+	Author = {Gong, Chenguang and Maquat, Lynne E},
+	Date-Added = {2017-09-22 12:59:06 +0000},
+	Date-Modified = {2017-09-22 12:59:06 +0000},
+	Journal = {Nature},
+	Number = {7333},
+	Pages = {284},
+	Publisher = {NIH Public Access},
+	Title = {LncRNAs transactivate Staufen1-mediated mRNA decay by duplexing with 3'UTRs via Alu elements},
+	Volume = {470},
+	Year = {2011}}
+
+@article{iyer2015landscape,
+	Author = {Iyer, Matthew K and Niknafs, Yashar S and Malik, Rohit and Singhal, Udit and Sahu, Anirban and Hosono, Yasuyuki and Barrette, Terrence R and Prensner, John R and Evans, Joseph R and Zhao, Shuang and others},
+	Date-Added = {2017-09-22 12:17:48 +0000},
+	Date-Modified = {2017-09-22 12:17:48 +0000},
+	Journal = {Nature genetics},
+	Number = {3},
+	Pages = {199--208},
+	Publisher = {Nature Research},
+	Title = {The landscape of long noncoding RNAs in the human transcriptome},
+	Volume = {47},
+	Year = {2015}}
 
 @article{seemann2017identification,
 	Author = {Seemann, Stefan E and Mirza, Aashiq H and Hansen, Claus and Bang-Berthelsen, Claus H and Garde, Christian and Christensen-Dalsgaard, Mikkel and Torarinsson, Elfar and Yao, Zizhen and Workman, Christopher T and Pociot, Flemming and others},
@@ -1015,13 +1039,12 @@ data are available at Bioinformatics online.},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/bioinformatics/btv748}}
 
 @article{Gotoh7166760,
-	author = {Gotoh, O.},
-	title = {An improved algorithm for matching biological sequences.},
-	journal = {J Mol Biol},
-	volume = {162},
-	number = {3},
-	year = {1982},
-	month = {Dec},
-	pages = {705-708},
-	pmid = {7166760}
-}
+	Author = {Gotoh, O.},
+	Journal = {J Mol Biol},
+	Month = {Dec},
+	Number = {3},
+	Pages = {705-708},
+	Pmid = {7166760},
+	Title = {An improved algorithm for matching biological sequences.},
+	Volume = {162},
+	Year = {1982}}
